; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_item.c_input_item_IsMaster.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_item.c_input_item_IsMaster.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@input_item_IsMaster.ppsz_master_exts = internal constant [1 x i8*] [i8* inttoptr (i64 128 to i8*)], align 8
@bsearch_strcmp_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @input_item_IsMaster to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @input_item_IsMaster(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strrchr(i8* %5, i8 signext 46)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load i8*, i8** %4, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %9, %1
  store i32 0, i32* %2, align 4
  br label %23

16:                                               ; preds = %9
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @ARRAY_SIZE(i8** getelementptr inbounds ([1 x i8*], [1 x i8*]* @input_item_IsMaster.ppsz_master_exts, i64 0, i64 0))
  %19 = load i32, i32* @bsearch_strcmp_cb, align 4
  %20 = call i32* @bsearch(i8* %17, i8** getelementptr inbounds ([1 x i8*], [1 x i8*]* @input_item_IsMaster.ppsz_master_exts, i64 0, i64 0), i32 %18, i32 8, i32 %19)
  %21 = icmp ne i32* %20, null
  %22 = zext i1 %21 to i32
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %15
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32* @bsearch(i8*, i8**, i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
